# libspn-keras

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.py  train.py
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  test-pypi.yml  test.yml  tests.yml
docker/: build.sh  push.sh
docker/dev/: Dockerfile  test.sh  test_it.sh
docs/: .gitignore  conf.py  index.rst  installation.md  reference.md  requirements.txt  tests.md
docs/api/: app.rst  constraints.rst  data.rst  exceptions.rst  generation.rst  graph.rst  inference.rst  initializers.rst  layers.rst  learning.rst  log.rst  losses.rst  metrics.rst  models.rst  optimizers.rst  region_graph.rst  root.rst  utils.rst  visualization.rst
docs/reference/: constraints.rst  initializers.rst  layers.rst  losses.rst  metrics.rst  models.rst  optimizers.rst  sumops.rst
docs/source/: conf.py
docs/source-dev/: conf.py  index.rst
examples/: mnist.py  simple.py
examples/mnist/: architectures.py  data.py  train.py
examples/mnist_olivetti/: architectures.py  data.py  train.py
examples/notebooks/: Benchmark With Einsum Networks.ipynb  Benchmark With Einsums.ipynb  DGC-SPN Image Classification.ipynb  DGC-SPN Image Completion.ipynb  Randomly Structured SPNs Image Classification.ipynb  Sampling with conv SPNs.ipynb  Understanding Region SPNs.ipynb  copy_of_libspn_dgc_spn_digit_classification_tutorial.py  libspn_dgc_spn_demo.py
ipynb/: Tutorial 1a.ipynb  Tutorial 1b.ipynb  Tutorial 1c.ipynb  Tutorial 2 inference.ipynb  Tutorial 3 learning.ipynb  custom_tf_op_visualization.ipynb  datasets.ipynb  dense_generator.ipynb  dense_generator_multi_nodes.ipynb  hard_em_learning.ipynb  hard_em_learning_rawdists.ipynb  libspn.ipynb  mnist_classification-multi_nodes.ipynb  mnist_classification.ipynb  mnist_classification_all_classes.ipynb  mnist_classification_contvars.ipynb  mnist_classification_contvars_visualize_gauss.ipynb  mnist_completion.ipynb  mnist_continuous_gd_wicker.ipynb  mnist_continuous_hard_em.ipynb  mnist_continuous_hard_em.py  mnist_continuous_tensorlayers.ipynb  mnist_discrete_gd.ipynb  mnist_discrete_gd_tensorlayer.ipynb  mnist_discrete_hard_em.ipynb  mpe_inference.ipynb  multi_nodes.ipynb  spn_saving_loading-multi_nodes.ipynb  spn_saving_loading.ipynb  test_gather_scatter_col_optimization.ipynb  tutorial_1a_building_graph_single.ipynb  tutorial_1b_building_graph_multi.ipynb  tutorial_1c_building_graph_generator.ipynb  tutorial_2_inference.ipynb  tutorial_3_learning.ipynb  tutorial_4_datasets.ipynb  vis_data.ipynb  vis_spn_graph.ipynb  vis_tf_graph.ipynb  weights.ipynb
ipynb/tensorflow/: gather_columns.ipynb  iv_value.ipynb  log_calculations.ipynb  log_derivatives.ipynb  mpe_path_ops.ipynb  multiple_graphs.ipynb  parallel_sums.ipynb  scatter_cols.ipynb  sessions.ipynb  variables.ipynb
libspn/: __init__.py  app.py  conf.py  exceptions.py  log.py  session.py
libspn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libspn/data/: cifar.py  csv.py  dataset.py  file.py  generated.py  image.py  mnist.py  writer.py
libspn/generation/: __init__.py  conversion.py  dense.py  dense_layernodes.py  dense_multinodes.py  spatial.py  test.py  weights.py
libspn/graph/: algorithms.py  basesum.py  concat.py  contvars.py  convprod.py  convprod2d.py  convproddepthwise.py  (+26 more)
libspn_keras/: __init__.py  backprop_mode.py  config.py  dimension_permutation.py  logspace.py  models.py  normalizationaxes.py  region.py  region_graph.py  sum_ops.py  util.py  visualize.py
tests/: test_continuous_spn.py  test_conv_spn.py  test_discrete_spn.py  test_dynamic_spn.py  utils.py
tfops/: .gitignore  BUILD  Makefile  context.py  gather_columns.cc  gather_columns_functor.cc  gather_columns_functor_gpu.cu.cc  gather_columns_functor_gpu.cu.h  gather_columns_op_test.py  gather_columns_performance_test.py  scatter_columns.cc  scatter_columns_functor.cc  scatter_columns_functor_gpu.cu.cc  scatter_columns_functor_gpu.cu.h  scatter_columns_op_test.py  scatter_columns_performance_test.py  test_performance.py  tf_indexing_performance_test.py
(+490 files in other folders)
