[tool.poetry]
name = "libspn-keras"
version = "0.6.0"
description = "LibSPN-Keras: A fledxible and scalable library for layer-based building and training of Sum-Product Networks"
license = "MIT"
homepage = "https://github.com/pronobis/libspn-keras"
repository = "https://github.com/pronobis/libspn-keras"
authors = ["Jos van de Wolfshaar <jos.vandewolfshaar@gmail.com>", "Andrzej Pronobis <pronobis@cs.washington.edu>"]
keywords = ["Sum Product Networks", "Probabilistic Deep Learning", "TensorFlow", "Uncertainty", "Probabilistic Graphical Models"]
documentation = "https://libspn-keras.readthedocs.io"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = ">=3.6.1"
tensorflow = ">=2.3"
tensorflow-probability = ">=0.11"
colorlover = "*"
plotly = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
nox = "*"
coverage = {extras = ["toml"], version = "*"}
pytest-cov = "*"
black = "^19.10b0"
flake8 = "*"
flake8-bandit = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
pytest-mock = "*"
mypy = "*"
pytype = {version = "*", python = ">=3.7"}
typeguard = "*"
flake8-annotations = "*"
flake8-docstrings = "*"
lint = "*"
darglint = "*"
sphinx = "*"
sphinx-autodoc-typehints = "*"
sphinx_rtd_theme = "*"
recommonmark = "*"
jupyterlab = "*"
sphinxcontrib-napoleon = "*"
parameterized = "*"
reorder-python-imports = "*"
scipy = "*"

[tool.coverage.run]
branch = true
source = ["libspn_keras"]

[tool.coverage.paths]
source = ["libspn_keras"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
